Revision history for Perl extension PPI

1.204_03 Mon 11 May 2009
	Summary:
	- More bug fixing, clean up, and optimisation
	- Cleaning up contributed APIs

	Details:
	- Removed the use of 'use base'
	- Various minor simplifications
	- Changed PPI::Structure::WhenMatch to ::When

1.204_02 Sun 10 May 2009
	Summary:
	- Various bug fixing and stabilisation work
	- It's a perl 5.10 extravaganza!

	Details:
	- Updated Module::Install to 0.87
	- Added Test::NoWarnings to the test suite
	- Added support for qw{foo} in addition to for ('foo')
	- Added support for vstrings again
	- Now supports the 5.10 "state" keyword.
	  (As far as PPI is concerned it's a synonym for "my")
	- Now supports switch statements.
	- Now supports the smart match operator (~~).
	- Now supports keeping track of line numbers and file names as
	  affected by the #line directive.
	- Now supports UNITCHECK blocks.
	- Statement::Include::module_version() implemented.
	- Statement::Include::arguments() implemented.
	- Statement::Variable::symbols() implemented.
	- Token::QuoteLike::Words::literal() implemented.
	- Token::Quote::Double::simplify() fixed.
	- Element line_number(), column_number(), visual_column_number(),
	  logical_line_number(), and logical_filename() implemented.
	- Support for Unicode byte order marks (PPI::Token::BOM) added.
	- Token::Word::method_call() implemented.
	- Element::descendant_of() and Element::ancestor_of() implemented.
	- Statement::specialized() implemented.
	- Now can handle files named "0".
	  (Perl::Critic got a complaint about this)
	- foreach loop variables can be declared using "our".
	- Much more comprehensive testing of compound statement detection.

1.204_01 Sun 18 May 2008
        Summary:
        - Unicode cleanup and bug fixing
	- Taking the opportunity to do some house cleaning while the
	  code base is relatively stable, before things get crazy again.

	Details:
        - For completeness sake, add support for empty documents