@@ -8,7 +8,8 @@ Revision history for Perl extension PPI
 	Details:
 	- Removed the use of 'use base'
 	- Various minor simplifications
-	- Changed PPI::Structure::WhenMatch to ::When
+	- Renamed PPI::Statement::Switch to ::Given
+	- Renamed PPI::Structure::WhenMatch to ::When
 
 1.204_02 Sun 10 May 2009
 	Summary:
